do not demote primary if a secondary restarts SERVER-2550